prevent scrollbar from moving page to the left

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,17 @@
   --primary-color: #548e9b;
 }
 
+html {
+  overflow-y: scroll;
+}
+
+@supports (scrollbar-gutter: stable) {
+  html {
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+  }
+}
+
 *,
 *:before,
 *:after {
